--- a/Flutter_Bloc/timer_bloc/pubspec.yaml
+++ b/Flutter_Bloc/timer_bloc/pubspec.yaml
@@ -31,16 +31,22 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  bloc: ^8.1.0
+  equatable: ^2.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_bloc: ^8.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  bloc_test: ^9.0.0
+  mocktail: ^0.3.0
+  very_good_analysis: ^3.1.0
 
+  
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
